test/Fail/Issue6654a.err
Issue6654a.agda:10.3-4: error: [ConstructorDoesNotFitInData]
Constructor b of sort Set₁ does not fit into data type of sort Set.
(Reason: Set₁ is not less or equal than Set)
when checking that the type (P : Set) → P → P of an argument to the
constructor b fits in the sort Set of the datatype.
Note: this argument is forced by the indices of b, so this
definition would be allowed under --large-indices.
